--- a/themes/default/css/global.css
+++ b/themes/default/css/global.css
@@ -87,6 +87,8 @@ h3 {
 
 .hide-left-column #left_column {display:none}
 .hide-left-column #center_column {width:757px}
+.hide-right-column #right_column {display:none}
+.hide-right-column #center_column {width:735px}
 
 /* text **************************************************************************************** */
 p {padding-bottom:20px}
