[-] FO/MO : Fixed typo

--- a/themes/default/css/global.css
+++ b/themes/default/css/global.css
@@ -349,7 +349,7 @@ ul.footer_links li .icon {
 .ie7 #center_column .sortPagiBar form {display:inline;}
 
 .sortPagiBar #productsSortForm {float:right;}
-	.sortPagiBar select#selectPrductSort {
+	.sortPagiBar select#selectProductSort {
 		margin:0 0 0 10px;
 		color:#000;
 		border:1px solid #ccc
