--- a/themes/default-bootstrap/sass/_theme_variables.scss
+++ b/themes/default-bootstrap/sass/_theme_variables.scss
@@ -1,4 +1,4 @@
-
+@import 'compass';
 @import 'bootstrap_lib/_variables';
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic);
 
@@ -15,6 +15,7 @@ $base-border-color:					#d6d4d4;
 $main_border:						1px solid $base-border-color;
 $dark-border-color:					#333;
 $light-border-color:				#fff;
+$homepage-footer-border:            #d9d9d9;
 
 //--------- BACKGROUNDS
 // -------------------------
@@ -23,6 +24,7 @@ $base-box-bg:                       #fbfbfb;
 $table-background:                  $base-box-bg;
 $dark-background:                   #333;
 $light-background:                  #fff;
+$homepage-footer-bg:                #f2f2f2;
 
 //--------- COLORS
 
