[+] FO : Added Update cart button

--- a/themes/default-bootstrap/css/global.css
+++ b/themes/default-bootstrap/css/global.css
@@ -2463,6 +2463,9 @@ a.price_discount_delete:hover {
     width: 50%;
   }
 }
+.update_cart {
+		text-align: center;
+}
 .cart_voucher {
   vertical-align: top !important;
 }
